# ritual

./: Cargo.toml  Dioxus.toml
assets/: main.css  normalize.css  remove_default_styles.css
src/: cli.rs  db.rs  main.rs  types.rs  utils.rs
src/components/: button.rs  emoji_picker.rs  icon.rs  mod.rs
