[package]
name = "ritual"
version = "0.1.0"
authors = ["druskus20 <dev@druskus.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.44", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "time",
  "net",
  "io-util",
] }
futures-util = { version = "0.3" }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-error = "0.2"
color-eyre = "0.6"
dioxus = { version = "0.6.3", features = ["router"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
itertools = "0.14"
indexmap = { version = "2.9", features = ["serde"] }
dioxus-free-icons = { version = "0.9", features = ["ionicons"] }

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
